[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Images/Dungeons/HareDungeon/HareDungeonEntrance.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/DungeonEntrance.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 280.006, 383.608 )

[node name="DungeonEntance" type="Area2D"]
scale = Vector2( 0.178568, 0.178568 )
script = ExtResource( 2 )

[node name="DoorHole" type="CollisionShape2D" parent="."]
position = Vector2( -44.8009, 142.803 )
shape = SubResource( 1 )

[node name="EntranceSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Doorway_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Doorway_body_exited"]
